[package]
name = "wol-mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bytes = "1.2.1"
clap = { version = "4.0.11", features = ["derive"] }
futures = "0.3.24"
mqtt = { git = "https://github.com/Freax13/mqtt.git", rev = "1bfef92" }
pnet = "0.31.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_yaml = "0.9.13"
socket2 = "0.4.7"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.15"
